# Graphing

./: LICENSE.md  README.md  TODO.md  cairofunctions.py  graphing.py  setup.cfg  setup.py  test-program.py
examples/: cairo-coordinates.py  conics.py  slope-field.py
graphing/: __init__.py  cairofunctions.py  data.py  template.tex  writeMathEq.py
