[metadata]
name = crosswind-gcomputenerd
version = 1.0.0
author = GComputeNerd
description = A simple graphing module
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GComputeNerd/Graphing-Calc
project_urls =
    Bug Tracker = https://github.com/GComputeNerd/Graphing-Calc/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = graphing
packages = find:
python_requires = >=3.6

[options.packages.find]
where = graphing
